# writeworld

./: .gitignore  .pre-commit-config.yaml  .windsurfrules  README.md  commit.sh  mypy.ini  pyproject.toml  pytest.ini  quick_start.sh  run_tests.sh  start_backend.sh  start_frontend.sh
.github/workflows/: test.yml
bootstrap/: product_application.py  server_application.py
config/: config.toml  custom_key.toml
docs/: Deep Research Architecher.md  framework_design.md  frontend_design_20250119.md  git_commit_convention.md  test_review_20250119.md  ui_design_rule.md
docs/20250119/: frontend_design_20250119.md
docs/20250215/: show_transparent_process.md
docs/20250223/: playwright-mcp-servers implementation.md
frontend/: THIRD_PARTY_LICENSES.md  jest.config.js  next.config.js  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/services/: languageDetection.ts  translationService.ts
frontend/src/styles/: globals.css  variables.css
frontend/src/theme/: themeConfig.ts
frontend/src/types/: components.ts
stubs/: sseclient.pyi
tests/: conftest.py
tests/core/events/: test_stream_events.py
tests/e2e/: test_translation_service.py
tests/fixtures/translation_data/: long_text_output.txt  long_text_result.txt  short_text_output.txt  short_text_result.txt
writeworld/: __init__.py
writeworld/api/: decorators.py
writeworld/api/routes/: stream_service.py
writeworld/biz/: __init__.py
writeworld/core/: __init__.py
writeworld/core/agent/: __init__.py  event_stream_base_agent.py
writeworld/core/doc_processor/: query_keyword_extractor.yaml
writeworld/core/events/: event_handler.py  stream_events.py
writeworld/core/knowledge/: law_knowledge.py  law_knowledge.yaml
writeworld/core/llm/: __init__.py  (+6 more)
writeworld/util/: jsonl_file_utils.py  time_utils.py  txt_file_utils.py
writeworld/web/: __init__.py
(+107 files in other folders)
